--- a/package.json
+++ b/package.json
@@ -11,11 +11,21 @@
     "seed": "node ./scripts/seed.js"
   },
   "dependencies": {
+    "@preact/signals": "^1.3.2",
     "@react-router/fs-routes": "^7.1.5",
     "@react-router/node": "^7.1.5",
     "@react-router/serve": "^7.1.5",
+    "@schedule-x/calendar": "^2.19.0",
+    "@schedule-x/drag-and-drop": "^2.18.0",
+    "@schedule-x/event-modal": "^2.18.0",
+    "@schedule-x/events-service": "^2.19.0",
+    "@schedule-x/react": "^2.19.0",
+    "@schedule-x/theme-default": "^2.19.0",
+    "express": "^4.21.2",
     "isbot": "^5.1.17",
     "js-yaml": "^4.1.0",
+    "multer": "^1.4.5-lts.1",
+    "preact": "^10.25.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
@@ -24,8 +34,10 @@
   },
   "devDependencies": {
     "@react-router/dev": "^7.1.5",
-    "@tailwindcss/vite": "^4.0.0",
+    "@tailwindcss/vite": "^4.0.5",
+    "@types/express": "^5.0.0",
     "@types/js-yaml": "^4.0.9",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.17.17",
     "@types/react": "^19.0.1",
     "@types/react-dom": "^19.0.1",
